--- a/app/src/templates/mails/request_invited.html
+++ b/app/src/templates/mails/request_invited.html
@@ -1,11 +1,9 @@
 <% extends 'mails/mail_base_layout.html' %>
 
 <% block content %>
-Recebemos sua solicitação de convite para participar do SisComando. Nós ficamos
-felizes por isso e temos a convicção que iremos ajudar você a se comunicar de forma
-mais fácil e mais social! <br>
-Neste período estamos em beta, assim pedimos a compreensão em aguardar a aprovação
-da sua solicitação.
+<p>
+Recebemos sua solicitação para participar do SisComando e estamos felizes por isso! <br>
+No momento estamos em beta, trabalhando de portas fechadas, em breve seu convite será aprovado.</p>
 <br>
 Obrigado!
 <% endblock %>
