--- a/app/src/templates/src/home.html
+++ b/app/src/templates/src/home.html
@@ -34,7 +34,7 @@
 <body unresolved id="home">
   <div id="wrapperContent" class="wrapper">
     <lp-header minHeight="550" videoShow="false" webm="/static/assets/videos/businessman.webm"
-    mp4="/static/assets/videos/4213120.mp4">
+    mp4="/static/assets/videos/4213120.mp4" bg="/static/assets/img/macbook-temp_1000.png">
       <span class="brand">
         <img src="/static/assets/img/logo_label_br.png">
       </span>
@@ -78,7 +78,7 @@
       </div>
       <div class="text-highlight-1">
         <lp-text-languages
-          pt-br='Rápido para prover soluções como comunicação e inteligência para problemas de alto impacto no negócio.'
+          pt-br='Rápido para prover soluções na comunicação e inteligência para problemas de alto impacto no negócio.'
         >
           Fast to provide solutions as communication and knowledge base to high-impact problems.
         </lp-text-languages>
