--- a/app/src/templates/home.html
+++ b/app/src/templates/home.html
@@ -8,7 +8,7 @@
   <link rel="apple-touch-icon" href="/static/assets/img/touch-icon-iphone.png">
   <link rel="apple-touch-icon" sizes="76x76" href="/static/assets/img/touch-icon-ipad.png">
   <link rel="apple-touch-icon" sizes="120x120" href="/static/assets/img/touch-icon-iphone-retina.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="/static/assets/img/touch-icon-ipad-retina.png">  
+  <link rel="apple-touch-icon" sizes="152x152" href="/static/assets/img/touch-icon-ipad-retina.png">        
          
   <title>SisComando - Mais fácil, mais social!</title>
 
@@ -519,7 +519,7 @@ html /deep/ .paper-shadow-bottom-z-5 {
   <link rel="icon" href="/static/assets/favicon.ico" type="image/x-icon">
 
 </head>
-<body unresolved="" id="home"><div hidden=""><polymer-element name="lp-header" attributes="minHeight videoShow webm mp4 poster" assetpath="/static/components/lp-header/">
+<body unresolved="" id="home"><div hidden=""><polymer-element name="lp-header" attributes="minHeight videoShow webm mp4 poster bg" assetpath="/static/components/lp-header/">
   <template>
     <style>:host {
   display: block;
@@ -534,11 +534,14 @@ html /deep/ .paper-shadow-bottom-z-5 {
 	font-size: 3em;
 	color: #FFF;
 	text-align: center;
-	background: url("/static/components/lp-header/images/macbook-temp.png") no-repeat center center fixed;
 	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: cover;
+  	background-position: center center;
+  	background-color: #282828;
+  	width: 100%;
+    background-repeat: no-repeat;
 }
 #heroMessage .brand {
 	position: absolute;
@@ -559,7 +562,7 @@ html /deep/ .paper-shadow-bottom-z-5 {
 }
 
 .video-overlay {
-    background: url("/static/components/lp-header/images/video-overlay.png") repeat scroll 0% 0% transparent;
+    background: url("../static/components/lp-header/images/video-overlay.png") repeat scroll 0% 0% transparent;
     position: absolute;
     left: 0px;
     top: 0px;
@@ -574,7 +577,7 @@ html /deep/ .paper-shadow-bottom-z-5 {
 	width: 100%; 
 	height: 100%; 
 	background: rgba(255,255, 255, 0.5); 
-	background: url("/static/components/lp-header/images/video-overlay.png") repeat scroll 0% 0% transparent;
+	background: url("../static/components/lp-header/images/video-overlay.png") repeat scroll 0% 0% transparent;
 }
 video#bgvid { 
 	display: none;
@@ -645,8 +648,9 @@ and (max-device-width : 667px) {
  }
  /* Mobile end */
 }
+
 </style>    
-    <div id="heroMessage" style="height: {{minHeight}}px;" horizontal="" layout="">
+    <div id="heroMessage" style="height: {{minHeight}}px; background: url({{bg}}) no-repeat; background-size: cover; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-position: center center;" horizontal="" layout="">
       <div class="quickmenu">
         <ul>
           <li><a href="/login"><content select=".item1"></content></a></li>
@@ -4101,7 +4105,7 @@ polyfill-next-selector {
 </polymer-element>
 </div>
   <div id="wrapperContent" class="wrapper">
-    <lp-header minheight="550" videoshow="false" webm="/static/assets/videos/businessman.webm" mp4="/static/assets/videos/4213120.mp4">
+    <lp-header minheight="550" videoshow="false" webm="/static/assets/videos/businessman.webm" mp4="/static/assets/videos/4213120.mp4" bg="/static/assets/img/macbook-temp_1000.png">
       <span class="brand">
         <img src="/static/assets/img/logo_label_br.png">
       </span>
@@ -4139,7 +4143,7 @@ polyfill-next-selector {
         <img-sprite src="/static/assets/img/sprite-call.png" width="145" height="144" frame="2"></img-sprite>
       </div>
       <div class="text-highlight-1">
-        <lp-text-languages pt-br="Rápido para prover soluções como comunicação e inteligência para problemas de alto impacto no negócio.">
+        <lp-text-languages pt-br="Rápido para prover soluções na comunicação e inteligência para problemas de alto impacto no negócio.">
           Fast to provide solutions as communication and knowledge base to high-impact problems.
         </lp-text-languages>
       </div>
@@ -4356,7 +4360,7 @@ polyfill-next-selector {
   <lp-sop-dialog id="dialogContact" backdrop="true">
     <span class="headline">Contact</span>
     <span class="content">
-        <form action="/contact/" method="post">
+        <form action="/contact" method="post">
           <paper-input-decorator label="Your Name">
               <input is="core-input">
           </paper-input-decorator>
