--- a/app/src/templates/register.html
+++ b/app/src/templates/register.html
@@ -4231,8 +4231,9 @@ content[select="[top]"]::content img.radial {
           <p>%% greetings %%, %% name %%! </p>
           <p>Digite uma senha para finalizar o cadastro.</p> 
           <form id="registerForm" name="form" action="/register" method="POST">
+            <input type="hidden" id="inviteID" name="invite" value="%% invite.pk %%">
             <paper-input-decorator label="Password" floatinglabel="">
-              <input is="core-input" type="password" id="passwordInput" value="" label="password">
+              <input is="core-input" type="password" name="password" id="passwordInput" value="" label="password">
             </paper-input-decorator>
             <template is="auto-binding">
               <paper-button id="submitbutton" raised="" on-tap="{{submitRegister}}">Enviar</paper-button>
@@ -4245,7 +4246,7 @@ content[select="[top]"]::content img.radial {
     var registerForm = document.querySelector('#registerForm');
       addEventListener('template-bound', function(ev){
         ev.target.submitRegister = function() {
-            registerForm.submit(;)
+            registerForm.submit();
         }
       });
     </script>
