Fixed bug from presentation with fullbleed

--- a/app/src/templates/register.html
+++ b/app/src/templates/register.html
@@ -470,7 +470,7 @@ and password).
 
 </head>
 
-<body fullbleed="" vertical="" layout="" unresolved=""><div hidden="">
+<body vertical="" layout="" unresolved=""><div hidden="">
 <polymer-element name="core-header-panel" assetpath="/static/components/core-header-panel/">
 <template>
 
