--- a/app/src/templates/src/login.html
+++ b/app/src/templates/src/login.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body fullbleed vertical layout unresolved>
+<body vertical layout unresolved>
 
     <core-header-panel>
       <!-- App context mini-header: you can to put logo app, name, etc.-->
