--- a/app/src/templates/login.html
+++ b/app/src/templates/login.html
@@ -346,6 +346,10 @@ html /deep/ core-icon {
 
 
 
+
+
+
+
 <style shim-shadowdom="">/*
  * @license
  * Copyright (c) 2014 The Polymer Project Authors. All rights reserved.
@@ -462,7 +466,7 @@ and password).
 
 </head>
 
-<body fullbleed="" vertical="" layout="" unresolved=""><div hidden="">
+<body vertical="" layout="" unresolved=""><div hidden="">
 <polymer-element name="core-header-panel" assetpath="/static/components/core-header-panel/">
 <template>
 
@@ -4066,13 +4070,16 @@ content[select="[top]"]::content img.radial {
     <h2>{{heading}}</h2>
     <content select="[top]"></content>
     <content select="[identifierHeading]"></content>
-    <paper-input id="identifierInput" value="{{identifier}}" label="{{identification}}"></paper-input>
+    
+    <!-- <paper-input id="identifierInput" value="{{identifier}}" label="{{identification}}" floatingLabel></paper-input>-->
+
+    <paper-input-decorator label="E-mail" floatinglabel="">
+      <input is="core-input" type="email" id="identifierInput" value="{{identifier}}" label="E-mail" floatinglabel="">
+    </paper-input-decorator>    
+    
     <content select="[passwordHeading]"></content>
     
-    <!--
-    <paper-input id="passwordInput" value="{{password}}" label="password" type="password"></paper-input>
-    -->
-    <paper-input-decorator label="with password" floatinglabel="">
+    <paper-input-decorator label="Password" floatinglabel="">
       <input is="core-input" type="password" id="passwordInput" value="{{password}}" label="password">
     </paper-input-decorator>
 
