--- a/app/src/templates/src/register.html
+++ b/app/src/templates/src/register.html
@@ -19,7 +19,7 @@
 
 </head>
 
-<body fullbleed vertical layout unresolved>
+<body vertical layout unresolved>
 
     <core-header-panel>
       <!-- App context mini-header: you can to put logo app, name, etc.-->
