Fixed BUG in filter after update issues by sse

--- a/app/src/templates/app.html
+++ b/app/src/templates/app.html
@@ -13030,6 +13030,9 @@ core-toolbar paper-icon-button {
               }
             } else {
               db.push(doc);  
+              // when doc is added in db to change issuesOrig. It was initiated 
+              // in first request.
+              this.issuesOrig = db;
             }
             
             window.localStorage.setItem("dbIssues",JSON.stringify(db));
@@ -13052,7 +13055,6 @@ core-toolbar paper-icon-button {
       updateIssues: function() {
           db = JSON.parse(window.localStorage.getItem("dbIssues"));
           db.forEach(this.cleanerClosed);
-          this.issuesOrig = db;
           window.localStorage.setItem("dbIssues", JSON.stringify(db));
           this.sortByScope();
       },
