--- a/app/siscomando/templates/mails/approved_invited.html
+++ b/app/siscomando/templates/mails/approved_invited.html
@@ -1,5 +1,5 @@
-<% extends 'mails/mail_base_layout.html' %>
+{% extends 'mails/mail_base_layout.html' %}
 
-<% block content %>
+{% block content %}
 Seu convite foi aprovado! Acesse %% url_for('register', token=token_url_register, _external=True) %% para concluir o registro.
-<% endblock %>
+{% endblock %}
