--- a/app/siscomando/templates/mails/mail_base_layout.html
+++ b/app/siscomando/templates/mails/mail_base_layout.html
@@ -31,8 +31,8 @@
                     <tr>
                       <td style="font-family:Helvetica,Arial,sans-serif;color:#2b2b2b;font-size:14px;padding:0px 34px 25px 34px;line-height:20px;font-weight:lighter">
                       <!-- put your messsage here -->
-                      <%  block content %>
-                      <% endblock %>
+                      {%  block content %}
+                      {% endblock %}
                     </tr>
                     <tr>
                       <td style="font-family:Helvetica,Arial,sans-serif;color:#454545;font-size:14px;font-weight:lighter;padding:0px 34px 35px 34px;line-height:20px">Equipe do <span class="il">SisComando</span>.</td>
