--- a/app/siscomando/templates/mails/request_invited.html
+++ b/app/siscomando/templates/mails/request_invited.html
@@ -1,9 +1,9 @@
-<% extends 'mails/mail_base_layout.html' %>
+{% extends 'mails/mail_base_layout.html' %}
 
-<% block content %>
+{% block content %}
 <p>
 Recebemos sua solicitação para participar do SisComando e estamos felizes por isso! <br>
 No momento estamos em beta, trabalhando de portas fechadas, em breve seu convite será aprovado.</p>
 <br>
 Obrigado!
-<% endblock %>
+{% endblock %}
