--- a/app/siscomando/templates/not_approved_invited.html
+++ b/app/siscomando/templates/not_approved_invited.html
@@ -1,6 +1,6 @@
-<% extends 'base_layout.html' %>
+{% extends 'base_layout.html' %}
 
-<% block mainContent %>
+{% block mainContent %}
 <div class="thanks-request">
 <h1>Aprovação pendente ou Convite já utilizado</h1>
 <p>%% greetings %% %% name %%.</p>
@@ -8,4 +8,4 @@
 Agradecemos sua compreensão.</p>
 <br><a href="/">Home</a>
 </div>
-<% endblock %>
+{% endblock %}
