--- a/app/siscomando/templates/settings.html
+++ b/app/siscomando/templates/settings.html
@@ -1,6 +1,6 @@
-<% extends 'base_layout.html' %>
+{% extends 'base_layout.html' %}
 
-<% block mainContent %>
+{% block mainContent %}
 <div id="app-settings" class="containerApp" horizontal layout>
     <div class="left-space"></div>
     <div class="content" flex>
@@ -12,4 +12,4 @@
     </div>
     <div class="right-space"></div>
 </div>
-<% endblock %>
+{% endblock %}
