--- a/app/siscomando/templates/base_layout.html
+++ b/app/siscomando/templates/base_layout.html
@@ -4,7 +4,7 @@
   <link rel="apple-touch-icon" href="/static/assets/img/touch-icon-iphone.png">
   <link rel="apple-touch-icon" sizes="76x76" href="/static/assets/img/touch-icon-ipad.png">
   <link rel="apple-touch-icon" sizes="120x120" href="/static/assets/img/touch-icon-iphone-retina.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="/static/assets/img/touch-icon-ipad-retina.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/static/assets/img/touch-icon-ipad-retina.png">  
   <title>SisComando - Mais fácil, mais social!</title>
 
   <script src="/static/components/webcomponentsjs/webcomponents.min.js"></script>
@@ -592,17 +592,17 @@ mode: cover
       <div class="core-header">
           <div class="appbrand" horizontal="" layout="" onclick="reload();">
             <span class="logo"> 
-              <img src="static/assets/img/logo_60.png">
+              <img src="/static/assets/img/logo_60.png">
             </span>
             <span class="appname">SisComando</span>
           </div>
       </div>
       <div class="baseContent">
-      <% block mainContent %>
-      <% endblock %>
+      {% block mainContent %}
+      {% endblock %}
       </div>      
     </core-header-panel>
-
+    <!-- <script src="assets/js/app.js"></script> -->
     <script>
         // Reload page
         function reload() {
