--- a/app/siscomando/templates/register.html
+++ b/app/siscomando/templates/register.html
@@ -4240,7 +4240,14 @@ content[select="[top]"]::content img.radial {
             </template>
           </form>          
         </div>
-      </div>      
+      </div> 
+      {% with messages = get_flashed_messages() %}
+        {% if messages %}
+          {% for message in messages %}
+          <paper-toast text="%% message %%" opened="true"></paper-toast>
+          {% endfor %}
+        {% endif %}
+      {% endwith %}           
     </core-header-panel>
     <script>
     var registerForm = document.querySelector('#registerForm');
