--- a/app/siscomando/templates/request_invite_successful.html
+++ b/app/siscomando/templates/request_invite_successful.html
@@ -1,10 +1,10 @@
-<% extends 'base_layout.html' %>
+{% extends 'base_layout.html' %}
 
-<% block mainContent %>
+{% block mainContent %}
 <div class="thanks-request">
 <h1>Obrigado pela solicitação!</h1>
 <p>Recebemos sua solicitação de convite para participar do SisComando. 
 Enviaremos uma mensagem para o e-mail informado após o convite ser aprovado.</p>
 <br><a href="/">Home</a>
 </div>
-<% endblock %>
+{% endblock %}
