--- a/app/siscomando/templates/src/base_layout.html
+++ b/app/siscomando/templates/src/base_layout.html
@@ -32,8 +32,8 @@
           </div>
       </div>
       <div class="baseContent">
-      <% block mainContent %>
-      <% endblock %>
+      {% block mainContent %}
+      {% endblock %}
       </div>      
     </core-header-panel>
     <!-- <script src="assets/js/app.js"></script> -->
